--- a/Second/.classpath
+++ b/Second/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/sist/Desktop/jsoup-1.11.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
